# goengc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.c
include/goengc/: bitfield.h  board.h  color_field.h  constants.h  floodfill.h  popcount.h  size.h  types.h
src/: board.c  constants.c  floodfill.c  popcount.c
